tests/fixtures/invalid/bad_namespace.avsc
{
  "type": "record",
  "name": "Test",
  "namespace": "123.invalid",
  "fields": [
    {"name": "value", "type": "string"}
  ]
}
